[package]
name = "bytes-pool"
version = "1.0.0"
edition = "2021"
rust-version = "1.57"
license = "MIT"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
description = "Allocation-free sharing of bytes and strings using `Bytes` as storage"
repository = "https://github.com/jnbooth/bytes-pool"
readme = "README.md"
keywords = ["buffers", "zero-copy", "string", "bytes", "bytestring"]
categories = ["no-std"]

[features]
default = ["std"]

extra-platforms = ["bytes/extra-platforms"]
serde = ["bytes/serde", "bytestring/serde"]
std = ["bytes/std"]

[dependencies.bytes]
version = "1.2"
default-features = false

[dependencies.bytestring]
version = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
